# afmo-eval

./: .gitignore  .gitlab-ci.yml  Dockerfile  INSTALL.md  README.md  STATUS.txt  docker-compose.yml  environment.yml  feature_names_fit.joblib  pca_reducer.joblib  pyproject.toml  requirements.txt  run_unix.sh  run_win.ps1
.devcontainer/: devcontainer.json
app/: AFMo.py  _bootstrap.py
app/pages/: 01_Data.py  02_Forecast_&_Accuracy.py  03_Evaluation_Study.py  __init__.py
app/pages/_subpages/: __init__.py  evaluation_section.py  forecast_section.py
app/utils/: io_utils.py  persist_utils.py  plot_utils.py  plots_zipper.py  state_utils.py  theme_utils.py
examples/: compA_downsampled_expo_3.csv
src/afmo/: __init__.py  cli.py  fc_metrics_effectiveness.py  fc_metrics_predictability.py  fc_metrics_scores.py  fc_models.py  features.py  helpers.py  io.py  meta_trainer.py  plot.py  predictor_metrics.py  predictors.py  split.py  study.py  tables.py
src/afmo/core/: registry.py
src/afmo/plots/: __init__.py  base.py  build.py  heatmap.py  hist.py  registry.py  scatter.py  utils.py
tests/: test_meta_trainer_alignment.py  test_meta_trainer_integration.py  test_metrics_predictability.py  test_predictors.py
