
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "afmo"
version = "1.0.0"
description = "AFMO: Accuracy of Forecast Models"
authors = [{name="Alina Timmermann"}]
readme = "README.md"
license = {text = ""}
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "numpy<2.0",
  "statsmodels<0.15",
  "scipy<1.12",
  "typer",
  "pmdarima<2.1"
, "seaborn>=0.13.0", "matplotlib>=3.7.0"]

[project.optional-dependencies]
ui = ["streamlit", "plotly"]

dev = ["pytest"]

[project.scripts]
afmo = "afmo.cli:main"
